--- a/Contacto.html
+++ b/Contacto.html
@@ -63,8 +63,8 @@
   <div>
     <label for="inputEmail3" class="col-sm-2 col-form-label">Comentarios</label>
   </div>
-  <div class="col-sm-10" width="80px">
-    <input type="comentarios" class="form-control1" id="inputEmail3">
+  <div class="col-sm-10">
+    <input width="80px" type="comentarios" class="form-control1" id="inputEmail3">
   </div>
 <button class="button3" class="mx-auto" style="width: 80px;" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Enviar</button>
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
