--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                   <li class="nav-item">
                     <a class="nav-link" href="index.html">Home</a>
                   </li>
-                  <li class="nav-item">cambios en 
+                  <li class="nav-item">
                     <a class="nav-link" href="Biografía.html">Biografía</a>
                   </li>
                   <li class="nav-item">
