--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="modal-dialog">
         <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Página actualmente en desarrollo</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Página accambio boton en hopmetualmente en desarrollo</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
     </div>
     <div class="modal-footer">
