--- a/Contacto.html
+++ b/Contacto.html
@@ -8,6 +8,7 @@
    <link rel="stylesheet" type="text/css" href="css/estilos.css">
    <link rel="stylesheet" href="./icofont/icofont.min.css">
 </head>
+<body>
 <div id="header" class="bg-light">
   <div class="container-flex">    
       <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#14d68f">
