--- a/Contacto.html
+++ b/Contacto.html
@@ -8,90 +8,90 @@
    <link rel="stylesheet" type="text/css" href="css/estilos.css">
    <link rel="stylesheet" href="./icofont/icofont.min.css">
 </head>
-<body>
-<div id="header" class="bg-light">
-  <div class="container-flex">    
-      <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#14d68f">
-      <div class="container-fluid"> 
-        <a class="navbar-brand" href="#"></a> 
-        <img src="assets/lostabaleros.jpg" class="logotaba" alt="logotaba" height="100px">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>  
-        <div class="collapse navbar-collapse" id="navbarNav"> 
-          <ul class="nav nav-pills flex-column flex-sm-row">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="Biografía.html">Biografía</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="Discografía.html">Discografía</a>
-            </li>  
-            <li class="nav-item">
-              <a class="nav-link" href="Galería.html">Galería</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="Contacto.html">Contacto</a>
-            </li>
-          </ul>
-      </div>
-  </nav>
-</div>
-</div>
-</div>
-<div class="subtitulo1">Contacto</div>
-<form class="contacto">
-  <div class="row mb-3">
-    <label for="inputEmail3" class="col-sm-2 col-form-label">Nombre y Apellido</label>
+<body class="fondocontacto">
+  <div id="header" class="bg-light">
+    <div class="container-flex">    
+        <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#14d68f">
+        <div class="container-fluid"> 
+          <a class="navbar-brand" href="#"></a> 
+          <img src="assets/lostabaleros.jpg" class="logotaba" alt="logotaba" height="100px">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>  
+          <div class="collapse navbar-collapse" id="navbarNav"> 
+            <ul class="nav nav-pills flex-column flex-sm-row">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="Biografía.html">Biografía</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="Discografía.html">Discografía</a>
+              </li>  
+              <li class="nav-item">
+                <a class="nav-link" href="Galería.html">Galería</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="Contacto.html">Contacto</a>
+              </li>
+            </ul>
+        </div>
+    </nav>
   </div>
-  <div class="col-sm-10">
-    <input type="NombreyApellido" class="form-control" id="imputtext">
   </div>
-  <div class="row mb-3">
-    <label for="inputEmail3" class="col-sm-2 col-form-label">Correo electrónico</label>
   </div>
-  <div class="col-sm-10">
-    <input type="email" class="form-control" id="inputEmail3">
-  </div>
-  <div>
-    <label for="inputEmail3" class="col-sm-2 col-form-label">Asunto</label>
-  </div>
-  <div class="col-sm-10">
-    <input type="asunto" class="form-control" id="inputEmail3">
-  </div>
-  <div class="mb-3">
-    <label for="exampleFormControlTextarea1" class="form-label">Comentarios</label>
-    <textarea class="form-control1" id="exampleFormControlTextarea1" rows="3"></textarea>
-  </div>
-<button class="button3" class="mx-auto" style="width: 90px;" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Enviar</button>
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Página actualmente en desarrollo</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-footer">
-        <button type="button3" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+  <div class="subtitulo1">Contacto</div>
+  <form class="contacto">
+    <div class="row mb-3">
+      <label for="inputEmail3" class="col-sm-2 col-form-label">Nombre y Apellido</label>
+    </div>
+    <div class="col-sm-10">
+      <input type="NombreyApellido" class="form-control" id="imputtext">
+    </div>
+    <div class="row mb-3">
+      <label for="inputEmail3" class="col-sm-2 col-form-label">Correo electrónico</label>
+    </div>
+    <div class="col-sm-10">
+      <input type="email" class="form-control" id="inputEmail3">
+    </div>
+    <div>
+      <label for="inputEmail3" class="col-sm-2 col-form-label">Asunto</label>
+    </div>
+    <div class="col-sm-10">
+      <input type="asunto" class="form-control" id="inputEmail3">
+    </div>
+    <div class="mb-3">
+      <label for="exampleFormControlTextarea1" class="form-label">Comentarios</label>
+      <textarea class="form-control1" id="exampleFormControlTextarea1" rows="3"></textarea>
+    </div>
+  <button class="button3" class="mx-auto" style="width: 90px;" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Enviar</button>
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Página actualmente en desarrollo</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-footer">
+          <button type="button3" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+        </div>
       </div>
     </div>
   </div>
-</div>
-<div id="footer">
-  <div class="redes">
-  <ul class="redes_sociales1" class="mx-auto" style="width: 200px">
-       <li><a href="https://www.youtube.com/user/lostabaleros" target="blank"><i class="icofont-youtube-play"></i></a></li>
-       <li><a href="https://www.facebook.com/los.tabaleros" target="blank"><i class="icofont-facebook"></i></a></li>
-       <li><a href="https://twitter.com/lostabaleros" target="blank"><i class="icofont-twitter"></i></a></li>
-       <li><a href="https://www.instagram.com/lostabaleros/"target="blank"><i class="icofont-instagram"></i></a></li>
- </ul>
- </div>
- <div class="mx-auto1" style="width: 200px;">
-   lostabalerosoficial
- </div>
-</div id="footer">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+  <div id="footer">
+    <div class="redes">
+    <ul class="redes_sociales1" class="mx-auto" style="width: 200px">
+        <li><a href="https://www.youtube.com/user/lostabaleros" target="blank"><i class="icofont-youtube-play"></i></a></li>
+        <li><a href="https://www.facebook.com/los.tabaleros" target="blank"><i class="icofont-facebook"></i></a></li>
+        <li><a href="https://twitter.com/lostabaleros" target="blank"><i class="icofont-twitter"></i></a></li>
+        <li><a href="https://www.instagram.com/lostabaleros/"target="blank"><i class="icofont-instagram"></i></a></li>
+  </ul>
+  </div>
+  <div class="mx-auto1" style="width: 200px;">
+    lostabalerosoficial
+  </div>
+  </div id="footer">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
