--- a/Contacto.html
+++ b/Contacto.html
@@ -41,7 +41,7 @@
   </div>
   </div>
   </div>
-  <div class="subtitulo1">Contacto</div>
+  <div class="h5">Contacto</div>
   <form class="contacto">
     <div class="row mb-3">
       <label for="inputEmail3" class="col-sm-2 col-form-label">Nombre y Apellido</label>
