--- a/Discografía.html
+++ b/Discografía.html
@@ -41,7 +41,7 @@
         </div>
         </div>
         </div>
-    <div class="subtitulo2">Discografía</div>
+    <div class="h3">Discografía</div>
     <div class="discos">
     <div class="discos1"> 
             <div><img class="contain" src="assets/burbuja loca.png" alt="Los Tabaleros" width="100%" height="320px"></div>
