--- a/Galería.html
+++ b/Galería.html
@@ -41,7 +41,7 @@
   </div>
   </div>
   </div>
-   <div class="subtitulo3">Galería</div>
+   <div class="h4">Galería</div>
 <div class="grupos">
    <div>
    <div class="grupo1">
