--- a/Discografía.html
+++ b/Discografía.html
@@ -48,7 +48,7 @@
             <div><img class="contain" src="assets/unanoche.png" alt="Los Tabaleros" width="100%" height="320px"></div>
         </div>
         <div class="botones1">
-          <button class="button2" class="mx-auto" style="width: 150px;"type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Descarga</button>
+          <button class="button" class="mx-auto" style="width: 150px;"type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">Descarga</button>
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
       <div class="modal-dialog">
         <div class="modal-content">
