--- a/Contacto.html
+++ b/Contacto.html
@@ -5,7 +5,7 @@
    <meta charset=utf-8>
    <meta name=viewport description="Formulario de contacto para recibir consultas e inquietudes de lxs interesadxs en Los Tabaleros" content="width=device-width, initial-scale=1">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-   <link rel="stylesheet" type="text/css" href="css/estilos.css">
+   <link rel="stylesheet" type="text/css" href="scss/estilos.css">
    <link rel="stylesheet" href="./icofont/icofont.min.css">
 </head>
 <body class="fondocontacto">
