cambios en sass

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
     </div>
     <div class="animate__animated animate__jackInTheBox">
-        <p class="h1"> Los Tabaleros</p>
+        <div class="h1">Los Tabaleros</div>
     </div>
     <img class="banner" src="assets/bannerfecha.jpg" alt="Los Tabaleros próxima fecha" position="fixed" width="90%">
     <div class="p animate__animated animate__zoomIn">¡VENÍ A DISFRUTAR LA EXPERIENCIA DE LA TABAFIESTA!</div>
