--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
     <br><img src="assets/fotofoto.jpg" class="ff" alt="Los Tabaleros presentación" position="fixed" width="60%"></br>
 <div id="footer">
   <div class="redes">
-    <ul class="redes_sociales" class="mx-auto" style="width: 200px">
+    <ul class="redes_sociales" class="mx-auto" style="width: 200px;">
       <li><a href="https://www.youtube.com/user/lostabaleros" target="blank"><i class="icofont-youtube-play"></i></a></li>
       <li><a href="https://www.facebook.com/los.tabaleros" target="blank"><i class="icofont-facebook"></i></a></li>
       <li><a href="https://twitter.com/lostabaleros" target="blank"><i class="icofont-twitter"></i></a></li>
-      <li><a href="https://www.instagram.com/lostabaleros/"target="blank"><i class="icofont-instagram"></i></a></li>
+      <li><a href="https://www.instagram.com/lostabaleros/"target="blank"><i class="icofont-instagram"></i></a></li>  
     </ul>
   </div>
   <div class="mx-auto" style="width: 200px;">
